// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<svg
  aria-label="Laster..."
  role="img"
  viewbox="0 0 50 50"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
`;

exports[`Sizes 1`] = `
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="2xs"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="xs"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="sm"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="md"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="lg"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="xl"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
`;

exports[`Variants 1`] = `
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="xl"
  data-color="neutral"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="xl"
  data-color="accent"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
<svg
  aria-label="Henter kaffe..."
  role="img"
  viewbox="0 0 50 50"
  data-size="xl"
  data-color="support2"
>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
  <circle
    cx="25"
    cy="25"
    r="20"
    fill="none"
    stroke-width="5"
  >
  </circle>
</svg>
`;
